# GPCR-annotation-tools

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  developing_styles.md  docker-compose.yml  future_plan.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
src/gpcr_tools/: __init__.py  __main__.py  config.py  workspace.py
src/gpcr_tools/_future_aggregation/: __init__.py
src/gpcr_tools/_future_ai_pipeline/: __init__.py
src/gpcr_tools/_future_validators/: __init__.py
src/gpcr_tools/aggregator/: __init__.py  ai_results_loader.py  enriched_loader.py  ground_truth.py  runner.py  voting.py
src/gpcr_tools/annotator/: __init__.py  cli_handler.py  gemini_client.py  pdf_compressor.py  post_processor.py  prompt_builder.py  runner.py  schema.py
src/gpcr_tools/csv_generator/: __init__.py  app.py  audit.py  csv_writer.py  data_loader.py  exceptions.py  logic.py  review_engine.py  ui.py  validation_display.py
src/gpcr_tools/fetcher/: __init__.py  cache.py  enricher.py  rcsb_client.py  runner.py  targets.py
src/gpcr_tools/papers/: __init__.py  downloader.py  runner.py  watcher.py
src/gpcr_tools/validator/: __init__.py  api_clients.py  cache.py  chimera.py  integrity_checker.py  ligand_validator.py  oligomer.py  receptor_validator.py
tests/: conftest.py
tests/fixtures/: sample_pdb_controversy.json  sample_pdb_oligomer.json  sample_pdb_simple.json  sample_validation.json  sample_voting_log.json
tests/fixtures/real_pdbs/: 5G53.json  8TII.json  9AS1.json  9BLW.json  9EJZ.json  9IQS.json  9M88.json  9NOR.json  (+1 more)
tests/integration/: test_aggregate_pipeline.py  test_csv_pipeline.py  test_curate_cli.py  test_fetch_live.py  test_fetch_papers_live.py  test_init_workspace_cli.py  test_real_pdb_aggregate.py  test_real_pdb_fixtures.py  test_real_pdb_gating.py  test_real_pdb_pipeline.py  test_real_pdb_review_engine.py
tests/unit/: test_ai_results_loader.py  test_annotator_gemini_client.py  test_annotator_pdf_compressor.py  test_annotator_post_processor.py  test_annotator_prompt_builder.py  test_annotator_runner.py  test_audit.py  test_cache.py  test_chimera.py  test_config.py  test_csv_writer.py  test_data_loader.py  test_fetcher_cache.py  test_fetcher_enricher.py  test_fetcher_targets.py  test_ground_truth.py  test_integrity_checker.py  test_ligand_validator.py  test_ne1_review_safety.py  test_ne2_oligomer.py  test_ne3_logic.py  test_oligomer.py  test_papers_downloader.py  test_papers_watcher.py  test_receptor_validator.py  test_review_engine.py  test_validation_display.py  test_voting.py  test_workspace.py
(+113 files in other folders)
